--- a/app/scss/components/modules/hero-notice.scss
+++ b/app/scss/components/modules/hero-notice.scss
@@ -1,7 +1,7 @@
 .hero-notice {
     width: 100%;
     display: block;
-    color: $hero-notice-color;
+    color: $gray;
     font-size: $hero-notice-font-size;
     margin-top: $hero-notice-top;
     text-align: center;
