--- a/app/scss/theme/variables.scss
+++ b/app/scss/theme/variables.scss
@@ -4,60 +4,24 @@ $alert-color:                           $orange;
 $success-color:                         $green;
 $default-feedback-bg-color:             $gray;
 
-// body colors
-$body-bg-color:                         darken(#fff, 10%);
-$body-color:                            $dark-gray;
-$link-hover-color:                      darken($base-accent-color, 10%);
-
 // layout colors
-$header-bg-color:                       darken($dark-gray, 10%);
-$header-title-bg-color:                 darken($dark-gray, 5%);
-$header-title-color:                    $light-gray;
-$header-search-ico-color:               lighten($dark-gray, 20%);
-
-$layout-active-comp-bg-color:           #000;
-$layout-side-bg-color:                  lighten($dark-gray, 5%);
-$layout-side-bg-hover-color:            lighten($dark-gray, 20%);
-$layout-side-color:                     $gray;
-$layout-side-header-bg-color:           darken($dark-gray, 5%);
-$layout-side-header-color:              lighten($dark-gray, 20%);
-
-$highlight-color:                       #fff;
-$hover-bg-color:                        lighten($base-accent-color, 20%);
-
-$base-button-color:                     $light-gray;
-$base-button-border-color:              $gray;
-
-$secondary-button-bg-color:             $dark-gray;
-$secondary-button-bg-color-hov:         darken($dark-gray, 10%);
-
-$hero-notice-color:                     $gray;
 $hero-notice-font-size:                 2em;
 $hero-notice-top:                       3em;
 
-$badge-bg-color:                        $red;
-$badge-color:                           #fff;
 $badge-radius:                          .3em;
 
-// form colors
-$base-input-bg-color:                   #fff;
-$base-input-color:                      $body-color;
-$inverted-input-bg-color:               #000;
-$inverted-input-color:                  #fff;
-
-$list-input-bg-color:                   rgba($inverted-input-bg-color,.3);
 
 // layout formatting
-$header-height:                         modular-scale($base-font-size, 2, $octave);
+$header-height:                         modular-scale(1rem, 2, $octave);
 $layout-columns:                        24;
 $layout-menu-col:                       5;
 $layout-main-col-w:                     19;
 $layout-main-col-r:                     13;
 $layout-details-col:                    6;
 
-$header-title-size:                     modular-scale($base-font-size, 1, $octave);
-$layout-menu-size:                      modular-scale($base-font-size, 1, $minor-third);
-$layout-menu-header-size:               modular-scale($base-font-size, 1, $octave);
+$header-title-size:                     modular-scale(1rem, 1, $octave);
+$layout-menu-size:                      modular-scale(1rem, 1, $minor-third);
+$layout-menu-header-size:               modular-scale(1rem, 1, $octave);
 $layout-feedback-size:                  1.2em;
 $layout-feedback-padding:               .5em 0;
 $layout-feedback-height:                3.5em;
@@ -69,25 +33,20 @@ $header-account-img-size:               3em;
 $header-account-img-pad:                .5em;
 
 // login formatting
-$login-font-size:                       modular-scale($base-font-size, 1, $perfect-fifth);
-$login-title-font-size:                 modular-scale($base-font-size, 2, $octave);
-$login-subtitle-font-size:              modular-scale($base-font-size, 1, $major-tenth);
+$login-font-size:                       modular-scale(1rem, 1, $perfect-fifth);
+$login-title-font-size:                 modular-scale(1rem, 2, $octave);
+$login-subtitle-font-size:              modular-scale(1rem, 1, $major-tenth);
 
 // loader formatting
-$loader-font-size:                      modular-scale($base-font-size, 1, $perfect-fifth);
+$loader-font-size:                      modular-scale(1rem, 1, $perfect-fifth);
 
 // fonts
 $header-font-weight:                    normal;
 
-// section colors
-$section-header-bg-color:               lighten($gray, 10%);
-$section-header-color:                  darken($dark-gray, 5%);
-$section-list-icon-color:               lighten($dark-gray, 5%);
-
 // section formatting
-$section-header-font-size:              modular-scale($base-font-size, 1, $perfect-fifth);
+$section-header-font-size:              modular-scale(1rem, 1, $perfect-fifth);
 $section-header-icon-top:               .5em;
-$section-header-icon-size:              modular-scale($base-font-size, 1, $octave);
+$section-header-icon-size:              modular-scale(1rem, 1, $octave);
 $section-header-input-width:            20em;
 $section-list-side-padding:             1em;
 $section-list-icon-left:                $header-height / $section-header-font-size / 5 * 1em;
@@ -108,46 +67,35 @@ $filter-select-margin-top:              .35em;
 $select-list-border-width:              .1em;
 $select-list-font-size:                 1.1em;
 $select-list-button-max-width:          10em;
-$select-list-button-bg-color:           none;
 $select-list-max-height:                12em;
-$select-list-border-color:              lighten($gray, 10%);
-$select-list-border:                    $select-list-border-color $select-list-border-width solid;
-$select-list-color:                     lighten($dark-gray, 20%);
-$select-list-bg-color:                  $highlight-color;
+$select-list-border:                    lighten($gray, 10%) $select-list-border-width solid;
 $select-list-button-padding:            .4em;
-$select-list-button-border:             $base-button-color 2px solid;
-$select-list-button-bg-color:           $base-button-color;
-$select-list-hl-bg-color:               darken($select-list-bg-color, 5%);
-$select-list-hl-button-border:          $highlight-color 2px solid;
-$select-list-hl-button-bg-color:        none;
+$select-list-button-border:             $light-gray 2px solid;
+$select-list-hl-button-border:          #fff 2px solid;
 $select-list-placeholder-border:        $light-gray 1px dashed;
 
 // content list formatting and colors
-$content-list-bg-color:                 lighten($section-header-bg-color, 20%);
 $content-list-item-spacing:             2px;
 $content-list-det-actions-top:          .7em;
 
 $content-list-1-button-margin-top:      .3em;
 $content-list-1-select-margin-top:      .2em;
-$content-list-item-1-height:            modular-scale($base-font-size, 2, $minor-seventh);
-$content-list-item-1-bg-color:          lighten($section-header-bg-color, 5%);
-$content-list-item-1-font-size:         modular-scale($base-font-size, 1, $perfect-fourth);
-$content-list-item-1-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
+$content-list-item-1-height:            modular-scale(1rem, 2, $minor-seventh);
+$content-list-item-1-font-size:         modular-scale(1rem, 1, $perfect-fourth);
+$content-list-item-1-icon-size:         modular-scale(1rem, 1, $minor-seventh);
 $content-list-item-1-progress-size:     1.75em; // to avoid rounding errors we make this a simple number
 $content-list-item-1-icon-top:          .4em;
 $content-list-item-1-icon-left:         1.25;
-$content-list-item-1-com-font-size:     $base-font-size;
-$content-list-item-1-com-color:         lighten($dark-gray, 25%);
-$content-list-item-action-icon-size:    modular-scale($base-font-size, 1, $minor-sixth);
+$content-list-item-1-com-font-size:     1rem;
+$content-list-item-action-icon-size:    modular-scale(1rem, 1, $minor-sixth);
 $content-list-item-action-icon-top:     .1em;
 
 $content-list-2-button-margin-top:      .27em;
 $content-list-2-select-margin-top:      .17em;
-$content-list-item-2-height:            modular-scale($base-font-size, 2, $major-sixth);
-$content-list-item-2-det-height:        modular-scale($base-font-size, 3, $major-sixth);
-$content-list-item-2-bg-color:          lighten($section-header-bg-color, 15%);
-$content-list-item-2-font-size:         modular-scale($base-font-size, 1, $minor-third);
-$content-list-item-2-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
+$content-list-item-2-height:            modular-scale(1rem, 2, $major-sixth);
+$content-list-item-2-det-height:        modular-scale(1rem, 3, $major-sixth);
+$content-list-item-2-font-size:         modular-scale(1rem, 1, $minor-third);
+$content-list-item-2-icon-size:         modular-scale(1rem, 1, $minor-seventh);
 $content-list-item-2-progress-size:     1.5em; // to avoid rounding errors we make this a simple number
 $content-list-item-2-icon-top:          .25em;
 $content-list-item-2-icon-left:         1.75;
@@ -156,19 +104,7 @@ $content-list-item-2-progress-top:      .4em;
 $content-list-3-button-margin-top:      .20em;
 $content-list-3-select-margin-top:      .10em;
 $content-list-item-3-spacing:           1px;
-$content-list-item-3-bg-color:          lighten($section-header-bg-color, 20%);
-$content-list-3-bg-color:               $content-list-item-1-bg-color;
 
-$content-list-handle-color:             #bbb;
-
-$run-failed-color:                      $light-red;
-$run-success-color:                     $lime;
-$run-skipped-color:                     $yellow;
-$run-progress-scenario-todo-bg:         lighten($light-gray, 4%);
-$run-progress-scenario-done-bg:         darken($light-gray, 8%);
-
-$tooltip-bg-color:                      $dark-gray;
-$tooltip-color:                         $highlight-color;
 $tooltip-border-radius:                 .3em;
 
 // sidebar formatting
@@ -177,4 +113,3 @@ $sidebar-collapsed-width:               3em;
 
 // editor formatting
 $editor-sort-active-border:             2px dashed;
-$editor-highlight-active-color:         lighten($yellow, 20%);
