--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -3,7 +3,7 @@ body {
     background-color: $base-background-color;
     color: $base-font-color;
     font-family: $base-font-family;
-    font-size: $base-font-size;
+    font-size: 1rem;
     line-height: $base-line-height;
 }
 
