--- a/app/scss/base/extends/_button.scss
+++ b/app/scss/base/extends/_button.scss
@@ -1,10 +1,10 @@
 %button {
     -webkit-font-smoothing: antialiased;
-    background-color: $base-button-color;
+    background-color: $light-gray;
     border-radius: $base-border-radius;
     color: #fff;
     display: inline-block;
-    font-size: $base-font-size;
+    font-size: 1rem;
     font-weight: bold;
     line-height: 1;
     padding: .75em 1em;
