--- a/app/scss/components/input.scss
+++ b/app/scss/components/input.scss
@@ -1,6 +1,6 @@
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    background-color: $base-input-bg-color;
-    color: $base-input-color;
+    background-color: #fff;
+    color: $dark-gray;
 }
