--- a/app/scss/components/modules/editor/editor-layout.scss
+++ b/app/scss/components/modules/editor/editor-layout.scss
@@ -34,6 +34,6 @@ div.editor-content {
 
     .sorting {
         border: $editor-sort-active-border;
-        background: $editor-highlight-active-color;
+        background: lighten($yellow, 20%);
     }
 }
