--- a/app/scss/components/modules/tooltip.scss
+++ b/app/scss/components/modules/tooltip.scss
@@ -2,14 +2,14 @@
     font-family: $base-font-family;
     left: 0;
     font-size: .7em;
-    background: $tooltip-bg-color;
-    color: $tooltip-color;
+    background: $dark-gray;
+    color: #fff;
     border-radius: $tooltip-border-radius;
     padding: 0 .5em;
     opacity: 0;
     cursor: default;
 
     &.left {
-        @include css-triangle(.3em, 0, $tooltip-bg-color, right, $tooltip-bg-color, absolute);
+        @include css-triangle(.3em, 0, $dark-gray, right, $dark-gray, absolute);
     }
 }
